--- a/index.html
+++ b/index.html
@@ -10,5 +10,42 @@
 </head>
 <body>
     
+    <!-- HEADER -->
+    <header class="header">
+
+        <div class="container">
+
+            <!-- HEADER NAV-->
+            <nav class="header__nav">
+
+                <ul>
+
+                    <li><a href="#">Главная</a></li>
+                    <li><a href="#">О нас</a></li>
+                    <li><a href="#">Контакты</a></li>
+
+                </ul>
+
+            </nav>
+
+            <!-- HEADER RIGHT-->
+            <div class="header__right">
+
+                <div class="header__right-number">
+                    <img src="./img/_header/phone.svg" alt="phone">
+                    <span>8 (964) 89 99 119</span>
+                </div>
+
+                <div class="header__right-delivery">
+                    <img src="./img/_header/delivery.svg" alt="delivery">
+                    <span>Доставка</span>
+                </div>
+
+            </div>
+
+        </div>
+
+    </header>
+    
 </body>
 </html>
